--- a/config.yml
+++ b/config.yml
@@ -107,7 +107,7 @@ params:
   homepage:
     # this options let you specify if you want a link to the homepage
     # it can be: "none", "menu", "footer" or "menu+footer"
-    linkPosition: "menu" 
+    linkPosition: "menu+footer"
     # this options let you specify the text of the link to the homepage
     linkText: "ホーム"  
     # option to specify the title in the homepage
